Fixed some spacing issues

--- a/pages/products/sys-mon/style/style.scss
+++ b/pages/products/sys-mon/style/style.scss
@@ -3,6 +3,7 @@
 .description{
 	padding: 2rem;
 	color: white;
+	line-height: 1.5rem;
 
 	h2{
 		font-family: 'Open Sans Condensed', sans-serif;
